--- a/ShiroProcessReporter/ShiroProcessReporter/Views/ReplaceRuleSettings.xaml
+++ b/ShiroProcessReporter/ShiroProcessReporter/Views/ReplaceRuleSettings.xaml
@@ -7,21 +7,24 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tkconverters="using:CommunityToolkit.WinUI.Converters"
-    xmlns:converter="using:ShiroProcessReporter.Converters"
     xmlns:models="using:ShiroProcessReporter.Models"
     xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d"
     Background="Transparent">
 
     <Page.Resources>
-        <converter:ReplaceRulesDictionaryToArrayConverter x:Key="ReplaceRulesDictionaryToArrayConverter" />
         <tkconverters:BoolToVisibilityConverter
             x:Key="BoolToInvertedVisibilityConverter"
             FalseValue="Visible"
             TrueValue="Collapsed" />
     </Page.Resources>
 
-    <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top" Padding="20" Spacing="8">
+    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="20" RowSpacing="8">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
         <ContentDialog
             x:Name="ReplaceRuleDialog"
             PrimaryButtonText="Save"
@@ -68,7 +71,7 @@
             <TextBlock Text="Are you sure delete this rule?" />
         </ContentDialog>
 
-        <StackPanel HorizontalAlignment="Right">
+        <StackPanel HorizontalAlignment="Right" Grid.Row="0">
             <Button Click="{x:Bind OpenNewDialogAsync}">
                 <StackPanel Orientation="Horizontal" Spacing="8">
                     <FontIcon
@@ -82,9 +85,10 @@
                 </Button.KeyboardAccelerators>
             </Button>
         </StackPanel>
-        <ListView
-            x:Name="ReplaceRuleListView"
-            Background="{ThemeResource LayerFillColorDefaultBrush}"
+        <ScrollView Grid.Row="1">
+            <ListView
+                x:Name="ReplaceRuleListView"
+                Background="{ThemeResource LayerFillColorDefaultBrush}"
                 BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
                 BorderThickness="1"
                 CornerRadius="{StaticResource OverlayCornerRadius}"
@@ -93,67 +97,68 @@
                 ItemsSource="{x:Bind ReplaceRules, Mode=TwoWay}"
                 RightTapped="ListView_RightTapped"
                 SelectedItem="{x:Bind Selected, Mode=TwoWay}">
-            <ListView.Header>
-                <Grid Background="Transparent" ColumnSpacing="8" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="16,8">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="20" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="64" />
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Text="Pattern" Grid.Column="0" TextAlignment="Center" FontWeight="Bold" />
-                    <TextBlock Text="Replace to" Grid.Column="2" TextAlignment="Center" FontWeight="Bold" />
-                </Grid>
-            </ListView.Header>
-            <ListView.ContextFlyout>
-                <MenuFlyout>
-                    <MenuFlyoutItem Text="Edit" Icon="Edit" Click="Edit_Click"/>
-                    <MenuFlyoutItem Text="Duplicate" Click="Duplicate_Click">
-                        <MenuFlyoutItem.Icon>
-                            <FontIcon Glyph="&#xF413;" />
-                        </MenuFlyoutItem.Icon>
-                    </MenuFlyoutItem>
-                    <MenuFlyoutSeparator />
-                    <MenuFlyoutItem Text="MoveUp" Click="ReorderButtonUp_Click">
-                        <MenuFlyoutItem.Icon>
-                            <FontIcon Glyph="&#xE74A;" />
-                        </MenuFlyoutItem.Icon>
-                    </MenuFlyoutItem>
-                    <MenuFlyoutItem Text="MoveDown" Click="ReorderButtonDown_Click">
-                        <MenuFlyoutItem.Icon>
-                            <FontIcon Glyph="&#xE74B;" />
-                        </MenuFlyoutItem.Icon>
-                    </MenuFlyoutItem>
-                    <MenuFlyoutSeparator />
-                    <MenuFlyoutItem Text="Delete" Icon="Delete" Click="Delete_Click" />
-                </MenuFlyout>
-            </ListView.ContextFlyout>
-            <ListView.ItemTemplate>
-                <DataTemplate x:DataType="models:ReplaceRule">
-                    <Grid Background="Transparent" ColumnSpacing="8" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                <ListView.Header>
+                    <Grid Background="Transparent" ColumnSpacing="8" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="16,8">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="20" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="64" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Original, Mode=OneWay}" VerticalAlignment="Center" TextAlignment="Center" />
-                        <Viewbox Grid.Column="1" Height="12" Width="12" Margin="0,4,0,0">
-                            <SymbolIcon Symbol="Forward" />
-                        </Viewbox>
-                        <TextBlock Grid.Column="2" Text="{Binding Replacement, Mode=OneWay}" VerticalAlignment="Center" TextAlignment="Center" />
-                        <Button
-                            Grid.Column="3"
-                            Height="32"
-                            Content="{ui:FontIcon Glyph=&#xE74D;,FontSize=16}"
-                            Background="Transparent"
-                            BorderBrush="Transparent"
-                            Click="Delete_Click"
-                            CommandParameter="{x:Bind (models:ReplaceRule)}"
-                            GotFocus="Item_GotFocus"/>
+                        <TextBlock Text="Pattern" Grid.Column="0" TextAlignment="Center" FontWeight="Bold" />
+                        <TextBlock Text="Replace to" Grid.Column="2" TextAlignment="Center" FontWeight="Bold" />
                     </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackPanel>
+                </ListView.Header>
+                <ListView.ContextFlyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem Text="Edit" Icon="Edit" Click="Edit_Click"/>
+                        <MenuFlyoutItem Text="Duplicate" Click="Duplicate_Click">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xF413;" />
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+                        <MenuFlyoutSeparator />
+                        <MenuFlyoutItem Text="MoveUp" Click="ReorderButtonUp_Click">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE74A;" />
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+                        <MenuFlyoutItem Text="MoveDown" Click="ReorderButtonDown_Click">
+                            <MenuFlyoutItem.Icon>
+                                <FontIcon Glyph="&#xE74B;" />
+                            </MenuFlyoutItem.Icon>
+                        </MenuFlyoutItem>
+                        <MenuFlyoutSeparator />
+                        <MenuFlyoutItem Text="Delete" Icon="Delete" Click="Delete_Click" />
+                    </MenuFlyout>
+                </ListView.ContextFlyout>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:ReplaceRule">
+                        <Grid Background="Transparent" ColumnSpacing="8" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="20" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="64" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Original, Mode=OneWay}" VerticalAlignment="Center" TextAlignment="Center" />
+                            <Viewbox Grid.Column="1" Height="12" Width="12" Margin="0,4,0,0">
+                                <SymbolIcon Symbol="Forward" />
+                            </Viewbox>
+                            <TextBlock Grid.Column="2" Text="{Binding Replacement, Mode=OneWay}" VerticalAlignment="Center" TextAlignment="Center" />
+                            <Button
+                                Grid.Column="3"
+                                Height="32"
+                                Content="{ui:FontIcon Glyph=&#xE74D;,FontSize=16}"
+                                Background="Transparent"
+                                BorderBrush="Transparent"
+                                Click="Delete_Click"
+                                CommandParameter="{x:Bind (models:ReplaceRule)}"
+                                GotFocus="Item_GotFocus"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </ScrollView>
+    </Grid>
 </Page>
