fix: 手动处理绑定事件，避免Frame组件内存泄漏导致的绑定问题

--- a/ShiroProcessReporter/ShiroProcessReporter/Views/LogViewer.xaml
+++ b/ShiroProcessReporter/ShiroProcessReporter/Views/LogViewer.xaml
@@ -47,8 +47,7 @@
         </StackPanel>
         <ListView
             Grid.Row="1"
-            x:Name="LogListView"
-            ItemsSource="{Binding Logs, Source={StaticResource globalStateWrapper}, Mode=OneWay}">
+            x:Name="LogListView">
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <ItemsStackPanel />
